deploy: 3bf40ddf2888b7cc626e0466d41385bd73e7a786

--- a/datasets.html
+++ b/datasets.html
@@ -152,7 +152,7 @@
                     </button>
 <br>
 <h2 id='custom-csv'>Custom csv</h2>
-<p><p>Loads a CSV file that contains numeric, categorical, and predictive data columns. To use all data in the file and automate discovery of numerical and categorical columns, as well as of delimiters, use the <code>auto csv</code> loader instead. Otherwise, set here all loading parameters. A <a href="https://pandas.pydata.org/">pandas</a> CSV reader is employed internally.</p> </p>
+<p><p>Loads a CSV file that contains numeric, categorical, and predictive data columns separated by a user-defined delimiter. Each row corresponds to a different data sample, with the first one sometimes holding column names (this is automatically detected). To use all data in the file and automate discovery of numerical and categorical columns, as well as of delimiters, use the <code>auto csv</code> loader instead. Otherwise, set here all loading parameters. A <a href="https://pandas.pydata.org/">pandas</a> CSV reader is employed internally.</p> </p>
 <b>Parameters</b><br> <button
                       type="button"
                       class="btn btn-light"
